# tryOpenGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  License.txt  README.md  main.cc
deprecated/: DynamicTriangle.h  InputManager.cc  InputManager.h  KeyboardListener.h  MatrixHelper.h  TestBackToBasic.h  TestBatchRender.h  TestDynamicRender.cc  TestDynamicRender.h  TestInstanceTriangle.cc  TestInstanceTriangle.h  TestRectangles.cc  TestRectangles.h  TestSquareWithTriangles.cc  TestSquareWithTriangles.h  TestTexture.cc  TestTexture.h  TestThreads.h  TestWorldManager.h  TileVertex.h  WorldManager.h  basicFirstForms.h  simple-tests.h  test_batch_render.shader  test_texture.shader  test_threads.shader
docs/: CbrRunbook.md
lib/: CMakeLists.txt
lib/stb_image/: stb_image.h
res/config/: tryOpenGLConfig.h.in
res/shaders/: basic.shader  scene_select_character.shader  scene_training.shader  test_back_to_basic.shader  test_dynamic_render.shader  test_instance_triangle.shader  test_rectangles.shader  test_square_triangle.shader  test_texture.shader
scripts/: cbr-all-format-test.sh  cbr-build-release.sh  cbr-build.sh  cbr-clang-format.sh  cbr-clang-tidy.sh  cbr-install-release.sh  cbr-install.sh  cbr-package-release.sh  cbr-test.sh
src/: cbrpch.h  glad.c  main.cc  simple-tests.h
src/MainAppController/: CMakeLists.txt  MainAppController.cc  MainAppController.h  cbrpch.cc  cbrpch.h
src/MainAppController/common/: AspectRatio.h  GameCharacter.h  GameStatistics.h  IndexBuffer.cc  IndexBuffer.h  Renderer.cc  Renderer.h  Shader.cc  Shader.h  StreamVertexBuffer.cc  StreamVertexBuffer.h  Texture.cc  Texture.h  TileVertex.h  VertexArray.cc  VertexArray.h  VertexBuffer.cc  VertexBuffer.h  VertexBufferElement.h  VertexBufferLayout.h  WindowListener.h  WindowStats.h  glmHeaders.h  openGLHeaders.h
src/MainAppController/helpers/: MatrixHelper.h  openGLErrorHelpers.cc  openGLErrorHelpers.h
src/MainAppController/lib/: CMakeLists.txt
src/MainAppController/lib/glad/: glad.c
src/MainAppController/lib/glad/include/glad/: glad.h
src/MainAppController/listeners/: KeyboardListener.h  WindowListener.h
src/MainAppController/managers/: GameManager.cc  GameManager.h  ImGuiManager.cc  ImGuiManager.h  InputManager.cc  InputManager.h  MatrixHelper.cc  MatrixHelper.h  ShaderManager.cc  ShaderManager.h  ThreadPoolManager.cc  ThreadPoolManager.h  WindowManager.cc  WindowManager.h  WorldManager.cc  WorldManager.h
src/MainAppController/models/: BaseSquareModel.h  CharacterModel.h  DynamicTriangle.h  InstancedTriangle.h  TargetSquare.h  TestModel.h  TileVertex.h  basicBackgroundColor.h  basicCamera.h  basicFirstForms.h  basicSquare.h  basicTriangle.h
src/MainAppController/tests/: SceneSelectCharacter.cc  SceneSelectCharacter.h  SceneTraining.cc  SceneTraining.h  Test.h  TestBackToBasic.cc  TestBackToBasic.h  TestBatchRender.cc  TestBatchRender.h  TestContext.h  TestDynamicRender.cc  TestDynamicRender.h  TestGameManager.cc  TestGameManager.h  TestInstanceTriangle.cc  TestInstanceTriangle.h  TestMenu.cc  TestMenu.h  TestRectangles.cc  TestRectangles.h  TestRenderTiles.cc  TestRenderTiles.h  TestSquareWithTriangles.cc  TestSquareWithTriangles.h  TestTexture.cc  TestTexture.h  TestThreads.cc  TestThreads.h  TestWorldManager.cc  TestWorldManager.h
src/include/glad/: glad.h
